rollback the clerkpaginatedresponse return type

--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -8,7 +8,7 @@ description: Adds a new identifier to the allowlist.
 Adds a new identifier to the allowlist.
 
 ```tsx
-function createAllowlistIdentifier: (params: AllowlistIdentifierCreateParams) => Promise<ClerkBackendApiResponse<AllowlistIdentifier>>;
+function createAllowlistIdentifier: (params: AllowlistIdentifierCreateParams) => Promise<AllowlistIdentifier>;
 ```
 
 ## `AllowlistIdentifierCreateParams`
@@ -27,16 +27,13 @@ const response = await clerkClient.allowlistIdentifiers.createAllowlistIdentifie
 });
 
 console.log(response);
-/* In this example, you can see that data is an AllowlistIdentifier object.
-{
-  data: _AllowlistIdentifier {
-    id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
-    identifier: 'test@example.com',
-    createdAt: 1705443883820,
-    updatedAt: 1705443883820,
-    invitationId: undefined
-  },
-  errors: null
+/*
+_AllowlistIdentifier {
+  id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+  identifier: 'test@example.com',
+  createdAt: 1705443883820,
+  updatedAt: 1705443883820,
+  invitationId: undefined
 }
 */
 ```
