--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -8,7 +8,7 @@ description: Deletes an allowlist identifier, given a valid ID.
 Deletes an allowlist identifier, given a valid ID.
 
 ```tsx
-function deleteAllowlistIdentifier: (allowlistIdentifierId: string) => Promise<ClerkBackendApiResponse<AllowlistIdentifier>>;
+function deleteAllowlistIdentifier: (allowlistIdentifierId: string) => Promise<AllowlistIdentifier>;
 ```
 
 ## `deleteAllowlistIdentifier()` Parameters
@@ -26,14 +26,11 @@ const response = await clerkClient.allowlistIdentifiers.deleteAllowlistIdentifie
 
 console.log(response);
 /*
-{
-  data: _DeletedObject {
-    object: 'allowlist_identifier',
-    id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
-    slug: null,
-    deleted: true
-  },
-  errors: null
+DeletedObject {
+  object: 'allowlist_identifier',
+  id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+  slug: null,
+  deleted: true
 }
 */
 ```
