--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves the list of allowlist identifiers.
 Retrieves the list of allowlist identifiers.
 
 ```tsx
-function getAllowlistIdentifier: () => Promise<ClerkBackendApiResponse<AllowlistIdentifier[]>>;
+function getAllowlistIdentifier: () => Promise<AllowlistIdentifier[]>;
 ```
 
 ## `getAllowlistIdentifierList()` Example
@@ -17,19 +17,15 @@ function getAllowlistIdentifier: () => Promise<ClerkBackendApiResponse<Allowlist
 const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
 
 console.log(response);
-/* In this example, you can see that data is an array of AllowlistIdentifier objects, and is populated with one AllowlistIdentifier.
-{
-  data: [
-    _AllowlistIdentifier {
-      id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
-      identifier: 'test@example.com',
-      createdAt: 1705443883820,
-      updatedAt: 1705443883820,
-      invitationId: undefined
-    }
-  ],
-  totalCount: 1,
-  errors: null
-}
+/* In this example, you can see that the array of AllowlistIdentifier objects is populated with only one AllowlistIdentifier.
+[
+  _AllowlistIdentifier {
+    id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+    identifier: 'test@example.com',
+    createdAt: 1705443883820,
+    updatedAt: 1705443883820,
+    invitationId: undefined
+  }
+]
 */
 ```
