--- a/docs/references/backend/invitations/create-invitation.mdx
+++ b/docs/references/backend/invitations/create-invitation.mdx
@@ -10,7 +10,7 @@ Creates a new invitation for the given email address and sends the invitation em
 Keep in mind that you cannot create an invitation if there is already one for the given email address. Also, trying to create an invitation for an email address that already exists in your application will result in an error.
 
 ```tsx
-function createInvitation: (params: CreateParams) => Promise<ClerkBackendApiResponse<Invitation>>;
+function createInvitation: (params: CreateParams) => Promise<Invitation>;
 ```
 
 ## `CreateParams`
@@ -37,17 +37,14 @@ const response = await clerkClient.invitations.createInvitation({
 
 console.log(response);
 /*
-{
-  data: _Invitation {
-    id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
-    emailAddress: 'invite@example.com',
-    publicMetadata: { example: 'metadata', example_nested: [Object] },
-    createdAt: 1705531674576,
-    updatedAt: 1705531674576,
-    status: 'pending',
-    revoked: undefined
-  },
-  errors: null
+_Invitation {
+  id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+  emailAddress: 'invite@example.com',
+  publicMetadata: { example: 'metadata', example_nested: [Object] },
+  createdAt: 1705531674576,
+  updatedAt: 1705531674576,
+  status: 'pending',
+  revoked: undefined
 }
 */
 ```
