--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves a list of all non-revoked invitations for your applicatio
 Retrieves a list of all non-revoked invitations for your application, sorted by descending creation date.
 
 ```tsx
-function getInvitationList: (params: GetInvitationListParams) => Promise<ClerkBackendApiResponse<Invitation[]>>;
+function getInvitationList: (params: GetInvitationListParams) => Promise<Invitation[]>;
 ```
 
 ## `GetInvitationListParams`
@@ -25,22 +25,18 @@ function getInvitationList: (params: GetInvitationListParams) => Promise<ClerkBa
 const response = await clerkClient.invitations.getInvitationList();
 
 console.log(response);
-/* In this example, you can see that data is an array of Invitation objects, and is populated with only one Invitation.
-{
-  data: [
-    _Invitation {
-      id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
-      emailAddress: 'invite@example.com',
-      publicMetadata: [Object],
-      createdAt: 1705531674576,
-      updatedAt: 1705531674576,
-      status: 'pending',
-      revoked: undefined
-    }
-  ],
-  totalCount: 1,
-  errors: null
-}
+/* In this example, you can see that the array of Invitation objects is populated with only one Invitation.
+[
+  _Invitation {
+    id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+    emailAddress: 'invite@example.com',
+    publicMetadata: [Object],
+    createdAt: 1705531674576,
+    updatedAt: 1705531674576,
+    status: 'pending',
+    revoked: undefined
+  }
+]
 */
 ```
 
@@ -53,21 +49,17 @@ Retrieves list of invitations that have been revoked.
 const response = await clerkClient.invitations.getInvitationList({ status: 'revoked'});
 
 console.log(response);
-/* In this example, you can see that data is an array of Invitation objects, and is populated with only one Invitation.
-{
-  data: [
-    _Invitation {
-      id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
-      emailAddress: 'invite@example.com',
-      publicMetadata: [Object],
-      createdAt: 1705531674576,
-      updatedAt: 1705531674576,
-      status: 'pending',
-      revoked: undefined
-    }
-  ],
-  totalCount: 1,
-  errors: null
-}
+/* In this example, you can see that the array of Invitation objects is populated with only one Invitation.
+[
+  _Invitation {
+    id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+    emailAddress: 'invite@example.com',
+    publicMetadata: [Object],
+    createdAt: 1705531674576,
+    updatedAt: 1705531674576,
+    status: 'pending',
+    revoked: undefined
+  }
+]
 */
 ```
