--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -8,7 +8,7 @@ description: Creates an invitation for new users to join an organization.
 Creates an invitation for new users to join an organization. 
 
 ```tsx
-function createOrganizationInvitation: (params: CreateOrganizationInvitationParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation>>;
+function createOrganizationInvitation: (params: CreateOrganizationInvitationParams) => Promise<OrganizationInvitation>;
 ```
 
 ## `CreateOrganizationInvitationParams`
@@ -36,20 +36,17 @@ const role = 'org:member';
 const response = await clerkClient.organizations.createOrganizationInvitation({organizationId, inviterUserId, emailAddress, role});
 
 console.log(response);
-/* In this example, you can see that data is an OrganizationInvitation object.
-{
-  data: _OrganizationInvitation {
-    id: 'orginv_2b6SO8VwBMDn2IMYn0xqiaSxVpN',
-    emailAddress: 'testclerk123@clerk.dev',
-    role: 'org:member',
-    organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
-    createdAt: 1705534000014,
-    updatedAt: 1705534000014,
-    status: 'pending',
-    publicMetadata: {},
-    privateMetadata: {}
-  },
-  errors: null
+/*
+_OrganizationInvitation {
+  id: 'orginv_2b6SO8VwBMDn2IMYn0xqiaSxVpN',
+  emailAddress: 'testclerk123@clerk.dev',
+  role: 'org:member',
+  organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+  createdAt: 1705534000014,
+  updatedAt: 1705534000014,
+  status: 'pending',
+  publicMetadata: {},
+  privateMetadata: {}
 }
 */
 ```
