--- a/docs/references/backend/organization/delete-organization-membership.mdx
+++ b/docs/references/backend/organization/delete-organization-membership.mdx
@@ -8,7 +8,7 @@ description: Removes a user from the specified organization.
 Removes a user from the specified organization.
 
 ```tsx
-function getOrganizationList: (params: DeleteOrganizationMembershipParams) => Promise<ClerkBackendApiResponse<OrganizationMembership>>;
+function getOrganizationList: (params: DeleteOrganizationMembershipParams) => Promise<OrganizationMembership>;
 ```
 
 ## `DeleteOrganizationMembershipParams`
@@ -28,40 +28,37 @@ const userId = 'user_2VdArFEn2gfBqt8sRePmsVPyDHv';
 const response = await clerkClient.organizations.deleteOrganizationMembership({organizationId, userId});
 
 console.log(response);
-/* In this example, you can see that data is an OrganizationMembership object.
-{
-  data: _OrganizationMembership {
-    id: 'orgmem_2b6TUmlDXlo3e9XPq3Wd9EyfIfj',
-    role: 'org:member',
-    publicMetadata: {},
+/*
+_OrganizationMembership {
+  id: 'orgmem_2b6TUmlDXlo3e9XPq3Wd9EyfIfj',
+  role: 'org:member',
+  publicMetadata: {},
+  privateMetadata: {},
+  createdAt: 1705534546701,
+  updatedAt: 1705534546701,
+  organization: _Organization {
+    id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+    name: 'Test Updated',
+    slug: 'test',
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+    hasImage: false,
+    createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+    createdAt: 1702488558853,
+    updatedAt: 1705536790529,
+    publicMetadata: [Object],
     privateMetadata: {},
-    createdAt: 1705534546701,
-    updatedAt: 1705534546701,
-    organization: _Organization {
-      id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
-      name: 'Test Updated',
-      slug: 'test',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
-      hasImage: false,
-      createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
-      createdAt: 1702488558853,
-      updatedAt: 1705536790529,
-      publicMetadata: [Object],
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    publicUserData: _OrganizationMembershipPublicUserData {
-      identifier: 'testclerk123@gmail.com',
-      firstName: 'test',
-      lastName: 'account',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVmRBckFNNWNyRUpxaGdmb3cydVBHZ29US2QifQ',
-      hasImage: true,
-      userId: 'user_2VdArFEn2gfBqt8sRePmsVPyDHv'
-    }
+    maxAllowedMemberships: 3,
+    adminDeleteEnabled: true,
+    members_count: undefined
   },
-  errors: null
+  publicUserData: _OrganizationMembershipPublicUserData {
+    identifier: 'testclerk123@gmail.com',
+    firstName: 'test',
+    lastName: 'account',
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVmRBckFNNWNyRUpxaGdmb3cydVBHZ29US2QifQ',
+    hasImage: true,
+    userId: 'user_2VdArFEn2gfBqt8sRePmsVPyDHv'
+  }
 }
 */
 ```
