--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -8,7 +8,7 @@ description: Deletes an organization given a valid ID.
 Deletes an organization given a valid ID.
 
 ```tsx
-function deleteOrganization: (organizationId: string) => Promise<ClerkBackendApiResponse<Organization>>;
+function deleteOrganization: (organizationId: string) => Promise<Organization>;
 ```
 
 ## `deleteOrganization()` Parameters
@@ -26,14 +26,11 @@ const response = await clerkClient.organizations.deleteOrganization(organization
 
 console.log(response);
 /*
-{
-  data: _DeletedObject {
-    object: 'organization',
-    id: 'org_2b6TtF4XlxDsKo6t0E0UyywGB72',
-    slug: null,
-    deleted: true
-  },
-  errors: null
+DeletedObject {
+  object: 'organization',
+  id: 'org_2b6TtF4XlxDsKo6t0E0UyywGB72',
+  slug: null,
+  deleted: true
 }
 */
 ```
