--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves a list of organization invitations that have not yet been
 Retrieves a list of organization invitations that have not yet been accepted.
 
 ```tsx
-function getOrganizationInvitationList: (params: GetOrganizationInvitationListParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation[]>>;
+function getOrganizationInvitationList: (params: GetOrganizationInvitationListParams) => Promise<PaginatedResourceResponse<OrganizationInvitation[]>>;
 ```
 
 ## `GetOrganizationInvitationListParams`
@@ -30,7 +30,7 @@ const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 const response = await clerkClient.organizations.getOrganizationInvitationList({ organizationId });
 
 console.log(response);
-/* In this example, you can see that data is an array of OrganizationInvitation objects, and is populated with two OrganizationInvitations.
+/*
 {
   data: [
     _OrganizationInvitation {
@@ -56,8 +56,7 @@ console.log(response);
       privateMetadata: {}
     }
   ],
-  totalCount: 2,
-  errors: null
+  totalCount: 2
 }
 */
 ```
@@ -69,7 +68,7 @@ Retrieves organization invitation list that is filtered by the status of the inv
 ```tsx
 const organizationId = 'my-organization-id';
 
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // returns a list of invitations that have not yet been accepted
   status: [ 'pending' ],
@@ -83,7 +82,7 @@ Retrieves organization invitation list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // returns the first 10 results
   limit: 10,
@@ -97,7 +96,7 @@ Retrieves organization invitation list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // skips the first 10 results
   offset: 10,
