--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves a list of organizations.
 Retrieves a list of organizations.
 
 ```tsx
-function getOrganizationList: (params: GetOrganizationListParams) => Promise<ClerkBackendApiResponse<Organization[]>>;
+function getOrganizationList: (params: GetOrganizationListParams) => Promise<PaginatedResourceResponse<Organization[]>>;
 ```
 
 ## `GetOrganizationListParams`
@@ -28,7 +28,7 @@ const response = await clerkClient.organizations.
 getOrganizationList();
 
 console.log(response);
-/* In this example, you can see that data is an array of Organization objects, and is populated with 10 out of 25 Organizations.
+/* In this example, you can see that data is an array of Organization objects, and is populated with 10 out of 25 Organizations. 
 {
   data: [
     _Organization {
@@ -183,7 +183,6 @@ console.log(response);
     }
   ],
   totalCount: 25,
-  errors: null
 }
 */
 ```
@@ -193,7 +192,7 @@ console.log(response);
 Retrieves organization list that is filtered by the number of results.
 
 ```tsx
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationList({
   // returns the first 10 results
   limit: 10,
 });
@@ -204,7 +203,7 @@ const { data, errors, totalCount } = await clerkClient.organizations.getOrganiza
 Retrieves organization list that is filtered by the number of results to skip.
 
 ```tsx
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationList({
   // skips the first 10 results
   offset: 10,
 });
@@ -216,5 +215,5 @@ Retrieves list of organizations that match the query.
 
 ```tsx
 // returns organizations that have 'test' in their name
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationList({ query: 'test' })
+const { data, totalCount } = await clerkClient.organizations.getOrganizationList({ query: 'test' })
 ```
