--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves a list of memberships for an organization.
 Retrieves a list of memberships for an organization.
 
 ```tsx
-function getOrganizationMembershipList: (params: GetOrganizationMembershipListParams) => Promise<ClerkBackendApiResponse<OrganizationMembership[]>>;
+function getOrganizationMembershipList: (params: GetOrganizationMembershipListParams) => Promise<PaginatedResourceResponse<OrganizationMembership[]>>;
 ```
 
 ## `GetOrganizationMembershipListParams`
@@ -53,8 +53,7 @@ console.log(response);
       publicUserData: [_OrganizationMembershipPublicUserData]
     }
   ],
-  totalCount: 2,
-  errors: null
+  totalCount: 2
 }
 */
 ```
@@ -66,7 +65,7 @@ Retrieves organization membership list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
   organizationId,
   // returns the first 10 memberships
   limit: 10,
@@ -80,7 +79,7 @@ Retrieves organizaiton membership list that is filtered by the number of results
 ```tsx
 const organizationId = 'my-organization-id';
 
-const { data, errors, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
+const { data, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
   organizationId,
   // skips the first 10 memberships
   offset: 10,
