--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -8,7 +8,7 @@ description: Retrieves a single organization by the organization ID, if the ID i
 Retrieves a single organization by the organization ID, if the ID is valid.
 
 ```tsx
-function getOrganization: (params: GetOrganizationParams) => Promise<ClerkBackendApiResponse<Organization>>;
+function getOrganization: (params: GetOrganizationParams) => Promise<Organization>;
 ```
 
 ## `GetOrganizationParams`
@@ -27,24 +27,21 @@ const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 const response = await clerkClient.organizations.getOrganization({ organizationId });
 
 console.log(response);
-/* In this example, you can see that data is an Organization object.
-{
-  data: _Organization {
-    id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
-    name: 'Test',
-    slug: 'test',
-    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
-    hasImage: false,
-    createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
-    createdAt: 1702488558853,
-    updatedAt: 1705536009506,
-    publicMetadata: {},
-    privateMetadata: {},
-    maxAllowedMemberships: 3,
-    adminDeleteEnabled: true,
-    members_count: undefined
-  },
-  errors: null
+/*
+Organization {
+  id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+  name: 'Test',
+  slug: 'test',
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+  hasImage: false,
+  createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+  createdAt: 1702488558853,
+  updatedAt: 1705536009506,
+  publicMetadata: {},
+  privateMetadata: {},
+  maxAllowedMemberships: 3,
+  adminDeleteEnabled: true,
+  members_count: undefined
 }
 */
 ```
@@ -56,5 +53,5 @@ Retrieve an organization by its slug instead of its ID.
 ```tsx
 const slug = 'my-organization-slug';
 
-const organization = await clerkClient.organizations.getOrganization({ slug });
+const response = await clerkClient.organizations.getOrganization({ slug });
 ```
