--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -8,7 +8,7 @@ description: Revokes an organization invitation from a user for the specified or
 Revokes an organization invitation from a user for the specified organization.
 
 ```tsx
-function revokeOrganizationInvitation: (params: RevokeOrganizationInvitationParams) => Promise<ClerkBackendApiResponse<OrganizationInvitation>>;
+function revokeOrganizationInvitation: (params: RevokeOrganizationInvitationParams) => Promise<OrganizationInvitation>;
 ```
 
 ## `RevokeOrganizationInvitationParams`
@@ -31,20 +31,17 @@ const requestingUserId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 const response = await clerkClient.organizations.revokeOrganizationInvitation({organizationId, invitationId, requestingUserId});
 
 console.log(response);
-/* In this example, you can see that data is an OrganizationInvitation object. The 'status' is now 'revoked'.
-{
-  data: _OrganizationInvitation {
-    id: 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY',
-    emailAddress: 'testclerk123@gmail.com',
-    role: 'org:member',
-    organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
-    createdAt: 1705538313485,
-    updatedAt: 1705538631145,
-    status: 'revoked',
-    publicMetadata: {},
-    privateMetadata: {}
-  },
-  errors: null
+/* In this example, you can see that the response is an OrganizationInvitation object. The 'status' is now 'revoked'.
+_OrganizationInvitation {
+  id: 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY',
+  emailAddress: 'testclerk123@gmail.com',
+  role: 'org:member',
+  organizationId: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+  createdAt: 1705538313485,
+  updatedAt: 1705538631145,
+  status: 'revoked',
+  publicMetadata: {},
+  privateMetadata: {}
 }
 */
 ```
