--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -8,7 +8,7 @@ description: Updates the metadata associated with a user's organization membersh
 Updates the metadata associated with a user's organization membership.
 
 ```tsx
-function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMembershipMetadataParams) => Promise<ClerkBackendApiResponse<OrganizationMembership>>;
+function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMembershipMetadataParams) => Promise<OrganizationMembership>;
 ```
 
 ## `UpdateOrganizationMembershipMetadataParams`
@@ -22,13 +22,14 @@ function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMember
 
 ## `updateOrganizationMembershipMetadata()` Example
 
-{/* TODO: The response on this was a promise? Idk, this needs to get looked at */}
+{/* TODO: The response on this was a pending promise? Idk, this needs to get looked at */}
+
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 
-const { data, errors } = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
+const response = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
   publicMetadata:{
     "example": "this value is updated!"
   }
