--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -8,7 +8,7 @@ description: Updates the metadata associated with the specified organization ID.
 Updates the metadata associated with the specified organization ID.
 
 ```tsx
-function updateOrganizationMetadata: (organizationId: string, params: UpdateOrganizationMetadataParams) => Promise<ClerkBackendApiResponse<Organization>>;
+function updateOrganizationMetadata: (organizationId: string, params: UpdateOrganizationMetadataParams) => Promise<Organization>;
 ```
 
 ## `UpdateOrganizationMetadataParams`
@@ -21,7 +21,7 @@ function updateOrganizationMetadata: (organizationId: string, params: UpdateOrga
 
 ## `updateOrganizationMetadata()` Example
 
-{/* TODO: Is returning a promise. need someone to help check this.. and then when I get this organization (using getOrganization), the metadata is not updated. so this is definitely not running correctly. */}
+{/* TODO: Is returning a pending promise. need someone to help check this.. and then when I get this organization (using getOrganization), the metadata is not updated. so this is definitely not running correctly. */}
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
