--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -5,10 +5,10 @@ description: Updates the organization name.
 
 # `updateOrganization()`
 
-Updates an organization given a valid organization ID. Throws an error if the organization ID is invalid.
+Updates an organization given a valid organization ID. 
 
 ```tsx
-function updateOrganization: (params: UpdateOrganizationParams) => Promise<ClerkBackendApiResponse<Organization>>;
+function updateOrganization: (params: UpdateOrganizationParams) => Promise<Organization>;
 ```
 
 ## `UpdateOrganizationParams`
@@ -31,24 +31,21 @@ const name = 'Test Updated';
 const response = await clerkClient.organizations.updateOrganization(organizationId, { name });
 
 console.log(response);
-/* In this example, you can see that data is an Organization object.
-{
-  data: _Organization {
-    id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
-    name: 'Test Updated',
-    slug: 'test',
-    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
-    hasImage: false,
-    createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
-    createdAt: 1702488558853,
-    updatedAt: 1705536790529,
-    publicMetadata: { example: 'metadata' },
-    privateMetadata: {},
-    maxAllowedMemberships: 3,
-    adminDeleteEnabled: true,
-    members_count: undefined
-  },
-  errors: null
+/*
+_Organization {
+  id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+  name: 'Test Updated',
+  slug: 'test',
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+  hasImage: false,
+  createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+  createdAt: 1702488558853,
+  updatedAt: 1705536790529,
+  publicMetadata: { example: 'metadata' },
+  privateMetadata: {},
+  maxAllowedMemberships: 3,
+  adminDeleteEnabled: true,
+  members_count: undefined
 }
 */
 ```
