--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -1,14 +1,14 @@
 ---
 title: deleteUser() | User Object
-description: Deletes a user given a valid ID. Throws an error otherwise.
+description: Deletes a user given a valid ID.
 ---
 
 # `deleteUser()`
 
-Deletes a user given a valid ID. Throws an error otherwise.
+Deletes a user given a valid ID.
 
 ```tsx
-function deleteUser: (userId: string) => Promise<ClerkBackendApiResponse<User>>;
+function deleteUser: (userId: string) => Promise<User>;
 ```
 
 ## `deleteUser()` Parameters
@@ -26,14 +26,11 @@ const response = await clerkClient.users.deleteUser(userId);
 
 console.log(response);
 /* 
-{
-  data: _DeletedObject {
-    object: 'user',
-    id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
-    slug: null,
-    deleted: true
-  },
-  errors: null
+_DeletedObject {
+  object: 'user',
+  id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
+  slug: null,
+  deleted: true
 }
 */
 ```
