--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -8,7 +8,7 @@ description: Retrieves the total number of users.
 Retrieves the total number of users.
 
 ```tsx
-function getCount: (params: UserCountParams) => Promise<ClerkBackendApiResponse<number>>;
+function getCount: (params: UserCountParams) => Promise<number>;
 ```
 
 ## `UserCountParams`
@@ -33,8 +33,8 @@ The total count of users can be filtered down by adding one or more of these par
 const response = await clerkClient.users.getCount();
 
 console.log(response);
-/* In this example, you can see that data includes the number of the total count of users, which is 369.
-{ data: 369, errors: null }
+/*
+369
 */
 ```
 
@@ -45,5 +45,5 @@ To do a broader match through a list of fields, you can use the query parameter 
 This example retrieves the total number of users matching the query `test`.
 
 ```tsx
-const { data, errors } = await clerkClient.users.getCount({ query: 'test' })
+const response = await clerkClient.users.getCount({ query: 'test' })
 ```
