--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -10,7 +10,7 @@ Updates a user with a given ID with attribute values provided in a params object
 The provided ID must be valid, otherwise an error will be thrown.
 
 ```tsx
-function updateUser: (userId: string, params: UpdateUserParams) => Promise<ClerkBackendApiResponse<User>>;
+function updateUser: (userId: string, params: UpdateUserParams) => Promise<User>;
 ```
 
 ## `UpdateUserParams`
@@ -40,40 +40,37 @@ const params = { firstName: 'John', lastName: 'Wick' };
 const response = await clerkClient.users.updateUser(userId, params);
 
 console.log(response);
-/* In this example, you can see that data is the updated User object, with a `firstName` and `lastName` of "John" and "Wick" respectively.
-{
-  data: _User {
-    id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
-    passwordEnabled: false,
-    totpEnabled: false,
-    backupCodeEnabled: false,
-    twoFactorEnabled: false,
-    banned: false,
-    createdAt: 1705604079724,
-    updatedAt: 1705604359924,
-    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiSlcifQ',
-    hasImage: false,
-    gender: undefined,
-    birthday: undefined,
-    primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
-    primaryPhoneNumberId: null,
-    primaryWeb3WalletId: null,
-    lastSignInAt: null,
-    externalId: null,
-    username: null,
-    firstName: 'John',
-    lastName: 'Wick',
-    publicMetadata: {},
-    privateMetadata: {},
-    unsafeMetadata: {},
-    emailAddresses: [ [_EmailAddress] ],
-    phoneNumbers: [],
-    web3Wallets: [],
-    externalAccounts: [],
-    lastActiveAt: null,
-    createOrganizationEnabled: true
-  },
-  errors: null
+/* In this example, you can see that the response is the updated User object, with a `firstName` and `lastName` of "John" and "Wick" respectively.
+_User {
+  id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
+  passwordEnabled: false,
+  totpEnabled: false,
+  backupCodeEnabled: false,
+  twoFactorEnabled: false,
+  banned: false,
+  createdAt: 1705604079724,
+  updatedAt: 1705604359924,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiSlcifQ',
+  hasImage: false,
+  gender: undefined,
+  birthday: undefined,
+  primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
+  primaryPhoneNumberId: null,
+  primaryWeb3WalletId: null,
+  lastSignInAt: null,
+  externalId: null,
+  username: null,
+  firstName: 'John',
+  lastName: 'Wick',
+  publicMetadata: {},
+  privateMetadata: {},
+  unsafeMetadata: {},
+  emailAddresses: [ [_EmailAddress] ],
+  phoneNumbers: [],
+  web3Wallets: [],
+  externalAccounts: [],
+  lastActiveAt: null,
+  createOrganizationEnabled: true
 }
 */
 ```
