--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -8,7 +8,7 @@ description: Retrieves a single client by its ID, if the ID is valid.
 Retrieves a single [`Client`](/docs/references/javascript/client) by its ID, if the ID is valid.
 
 ```tsx
-function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client>>;
+function getClient: (clientId: string) => Promise<Client>;
 ```
 
 ## `getClient()` Parameters
@@ -20,24 +20,21 @@ function getClient: (clientId: string) => Promise<ClerkBackendApiResponse<Client
 ## `getClient()` Example
 
 ```tsx
-const clientId = 'my-client-id';
+const clientId = 'client_2b6J9fCrQt0KRCCtFu7WCIQvSfd';
 
 const response = await clerkClient.clients.getClient(clientId);
 
 console.log(response);
 /*
-{
-  data: _Client {
-    id: 'client_2b6J9fCrQt0KRCCtFu7WCIQvSfd',
-    sessionIds: [ 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG' ],
-    sessions: [ [_Session] ],
-    signInId: null,
-    signUpId: null,
-    lastActiveSessionId: 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG',
-    createdAt: 1705529444202,
-    updatedAt: 1705530913279
-  },
-  errors: null
+_Client {
+  id: 'client_2b6J9fCrQt0KRCCtFu7WCIQvSfd',
+  sessionIds: [ 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG' ],
+  sessions: [ [_Session] ],
+  signInId: null,
+  signUpId: null,
+  lastActiveSessionId: 'sess_2b6M8I4VZ1wMtgXGQeDe3SJD3cG',
+  createdAt: 1705529444202,
+  updatedAt: 1705530913279
 }
 */
 ```
