--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -8,7 +8,7 @@ description: Retrieves a client for a given session token, if the session is act
 Retrieves a [`Client`](/docs/references/javascript/client) for a given session token, if the session is active.
 
 ```tsx
-function verifyClient: (token: string) => Promise<ClerkBackendApiResponse<Client>>;
+function verifyClient: (token: string) => Promise<Client>;
 ```
 
 ## `verifyClient()` Parameters
@@ -22,5 +22,5 @@ function verifyClient: (token: string) => Promise<ClerkBackendApiResponse<Client
 ```tsx
 const token = 'my-session-token';
 
-const { data, errors } = await clerkClient.clients.verifyClient(token);
+const response = await clerkClient.clients.verifyClient(token);
 ```
