--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -10,7 +10,7 @@ Creates a user. Your user management settings determine how you should setup you
 Any email address and phone number created using this method will be automatically marked as verified.
 
 ```tsx
-function createUser: (params: CreateUserParams) => Promise<ClerkBackendApiResponse<User>>;
+function createUser: (params: CreateUserParams) => Promise<User>;
 ```
 
 ## `CreateUserParams`
@@ -38,40 +38,37 @@ const response = await clerkClient.users.createUser({
 })
 
 console.log(response);
-/* In this example, you can see that data is the created User object, with `firstName` as "Test", `lastName` as "User", and `emailAddress` as an array of email addresses, which would include "testclerk123@gmail.com".
-{
-  data: _User {
-    id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
-    passwordEnabled: false,
-    totpEnabled: false,
-    backupCodeEnabled: false,
-    twoFactorEnabled: false,
-    banned: false,
-    createdAt: 1705604079724,
-    updatedAt: 1705604079746,
-    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiVFUifQ',
-    hasImage: false,
-    gender: undefined,
-    birthday: undefined,
-    primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
-    primaryPhoneNumberId: null,
-    primaryWeb3WalletId: null,
-    lastSignInAt: null,
-    externalId: null,
-    username: null,
-    firstName: 'Test',
-    lastName: 'User',
-    publicMetadata: {},
-    privateMetadata: {},
-    unsafeMetadata: {},
-    emailAddresses: [ [_EmailAddress] ],
-    phoneNumbers: [],
-    web3Wallets: [],
-    externalAccounts: [],
-    lastActiveAt: null,
-    createOrganizationEnabled: true
-  },
-  errors: null
+/* In this example, you can see that the response is the created User object, with `firstName` as "Test", `lastName` as "User", and `emailAddress` as an array of email addresses, which would include "testclerk123@gmail.com".
+_User {
+  id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
+  passwordEnabled: false,
+  totpEnabled: false,
+  backupCodeEnabled: false,
+  twoFactorEnabled: false,
+  banned: false,
+  createdAt: 1705604079724,
+  updatedAt: 1705604079746,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJ1c2VyXzJiOGtRbGVTUk5tY09TQ2RKMVk4cFNScjRtSyIsImluaXRpYWxzIjoiVFUifQ',
+  hasImage: false,
+  gender: undefined,
+  birthday: undefined,
+  primaryEmailAddressId: 'idn_2b8kQl4UaaUIbJKXp7q8KSLskkO',
+  primaryPhoneNumberId: null,
+  primaryWeb3WalletId: null,
+  lastSignInAt: null,
+  externalId: null,
+  username: null,
+  firstName: 'Test',
+  lastName: 'User',
+  publicMetadata: {},
+  privateMetadata: {},
+  unsafeMetadata: {},
+  emailAddresses: [ [_EmailAddress] ],
+  phoneNumbers: [],
+  web3Wallets: [],
+  externalAccounts: [],
+  lastActiveAt: null,
+  createOrganizationEnabled: true
 }
 */
 ```
