--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -8,7 +8,7 @@ description: The getUserList() method retrieves a list of users.
 Retrieves a list of users.
 
 ```tsx
-function getUserList(): (params: UserListParams) => Promise<ClerkBackendApiResponse<User[]>>;
+function getUserList(): (params: UserListParams) => Promise<PaginatedResourceResponse<User[]>>;
 ```
 
 ## `UserListParams`
@@ -70,8 +70,7 @@ console.log(response);
     },
     ...
   ],
-  totalCount: 10,
-  errors: null
+  totalCount: 10
 }
 */
 ```
@@ -81,7 +80,7 @@ console.log(response);
 Retrieves user list that is ordered and filtered by the number of results.
 
 ```tsx
-const { data, errors, totalCount } = await clerkClient.users.getUserList({
+const { data, totalCount } = await clerkClient.users.getUserList({
   orderBy: '-created_at',
   limit: 10,
 });
@@ -97,7 +96,7 @@ const emailAddress = ['email1@clerk.dev', 'email2@clerk.dev'];
 const phoneNumber = ['+12025550108'];
 
 // If these filters are included, the response will contain only users that own any of these emails and/or phone numbers.
-const { data, errors, totalCount } = await clerkClient.users.getUserList({ emailAddress, phoneNumber });
+const { data, totalCount } = await clerkClient.users.getUserList({ emailAddress, phoneNumber });
 ```
 
 ### `getUserList({ query })`
@@ -106,7 +105,7 @@ To do a broader match through a list of fields, you can use the query parameter 
 
 ```tsx
 // Matches users with the string `test` matched in multiple user attributes.
-const { data, errors, totalCount } = await clerkClient.users.getUserList({
+const { data, totalCount } = await clerkClient.users.getUserList({
   query: 'test',
 });
 ```
